syntax = "proto3";

package tracker;

message Detection {
  float x1 = 1;
  float y1 = 2;
  float x2 = 3;
  float y2 = 4;
  float score = 5;
}

message FrameDetections {
  repeated Detection dets = 1;
  int32 img_width = 2;
  int32 img_height = 3;
  bytes image = 4;
}

message Track {
  int32 id = 1;
  float x1 = 2;
  float y1 = 3;
  float x2 = 4;
  float y2 = 5;
}

message TracksResponse {
  repeated Track tracks = 1;
}

// Новое сообщение для параметров трекера
message TrackerParams {
  float track_thresh = 1;
  float high_thresh = 2;
  float match_thresh = 3;
  int32 track_buffer = 4;
}

message InitResponse {
  bool ok = 1;
}

service TrackerService {
  rpc InitTracker(TrackerParams) returns (InitResponse);  // новый метод
  rpc UpdateTracks(FrameDetections) returns (TracksResponse);
}
